fixed creating entry bug + content editable div now preserve spacing & have padding for cursor

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -148,9 +148,14 @@ $side-panel: rgb(113, 120, 113);
     cursor: pointer;
 }
 
+.editable {
+    padding: 5px;
+}
 .editable:empty:before {
     content: attr(data-placeholder);
     color: rgb(109, 109, 109);
+    white-space: pre-wrap;
+    word-wrap: normal;
 }
 
 
